@@ -2,6 +2,10 @@ Updates in v0.7.5
 MONITORING:
 1. get_dvv: improved plot saving.
 
+DISPERSION:
+1. get_dispersion_image: use adaptive window size for different periods, increasing with periods.
+  This is optionsal.
+
 ===================================================================
 Updates in v0.7.4
 UTILS:
